CHANGES
=======
0.6.5
=====
- orm
  - Fixed recursion bug which could occur when moving
    an object from one reference to another, with 
    backrefs involved, where the initiating parent
    was a subclass (with its own mapper) of the 
    previous parent.

  - Fixed a regression in 0.6.4 which occurred if you 
    passed an empty list to "include_properties" on 
    mapper() [ticket:1918]
  
  - The exception raised by Session when it is used
    subsequent to a subtransaction rollback (which is what
    happens when a flush fails in autocommit=False mode) has
    now been reworded (this is the "inactive due to a
    rollback in a subtransaction" message). In particular,
    if the rollback was due to an exception during flush(),
    the message states this is the case, and reiterates the
    string form of the original exception that occurred
    during flush. If the session is closed due to explicit
    usage of subtransactions (not very common), the message
    just states this is the case.

  - The exception raised by Mapper when repeated requests to
    its initialization are made after initialization already
    failed no longer assumes the "hasattr" case, since
    there's other scenarios in which this message gets
    emitted, and the message also does not compound onto
    itself multiple times - you get the same message for
    each attempt at usage. The misnomer "compiles" is being
    traded out for "initialize".
    
  - Added an assertion during flush which ensures
    that no NULL-holding identity keys were generated
    on "newly persistent" objects.
    This can occur when user defined code inadvertently
    triggers flushes on not-fully-loaded objects.

  - lazy loads for relationship attributes now use
    the current state, not the "committed" state,
    of foreign and primary key attributes
    when issuing SQL, if a flush is not in process.
    Previously, only the database-committed state would 